[gd_scene load_steps=5 format=3 uid="uid://vq7dgv26b7yt"]

[ext_resource type="Script" uid="uid://egj1tfdw38n3" path="res://scripts/game_manager.gd" id="1_lnu2h"]
[ext_resource type="PackedScene" uid="uid://dvke3s2413ele" path="res://scenes/player.tscn" id="1_uwrxv"]
[ext_resource type="Texture2D" uid="uid://dmyvqgxrrjp8g" path="res://assets/sprites/projectile.png" id="2_lbhrr"]
[ext_resource type="PackedScene" uid="uid://biicec4xpag0v" path="res://scenes/enemy.tscn" id="2_yqjtg"]

[node name="Game" type="Node2D"]

[node name="GameManager" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("1_lnu2h")

[node name="Camera2D" type="Camera2D" parent="GameManager"]

[node name="RoundTimer" type="Timer" parent="GameManager"]
one_shot = true

[node name="Player" parent="GameManager" node_paths=PackedStringArray("game_manager") instance=ExtResource("1_uwrxv")]
position = Vector2(-461, 261)
game_manager = NodePath("..")

[node name="Enemy" parent="GameManager" node_paths=PackedStringArray("game_manager") instance=ExtResource("2_yqjtg")]
position = Vector2(448, 280)
game_manager = NodePath("..")

[node name="Transition" type="Sprite2D" parent="GameManager"]
position = Vector2(3.5, 2)
scale = Vector2(3.25833, 2.0679)
texture = ExtResource("2_lbhrr")

[node name="Label" type="Label" parent="GameManager"]
offset_left = -543.0
offset_top = -129.0
offset_right = -166.0
offset_bottom = -48.0
text = "Score:"

[connection signal="timeout" from="GameManager/RoundTimer" to="GameManager" method="_on_round_timer_timeout"]
